Repolished, added more images

--- a/_BaseModule/MaestroItalianSigns.csproj
+++ b/_BaseModule/MaestroItalianSigns.csproj
@@ -23,7 +23,7 @@
     <ThumbnailPath>Properties/Thumbnail.png</ThumbnailPath>
     <DisplayName>Italian Signs (WE-Module)</DisplayName>
     <ShortDescription>A WriteEverywhere-Module that give the ability to place, create or edit Italian Signs</ShortDescription>
-    <ForumLink></ForumLink>
+    <ForumLink>https://forum.paradoxplaza.com/forum/threads/italian-signs-we-module.1862096</ForumLink>
     <GitHubLink>https://github.com/UnMaestro/Maestros-CS2-ItalianSigns</GitHubLink>
     <YoutubeLink></YoutubeLink>
     <KofiLink></KofiLink>
