--- a/_BaseModule/MaestroItalianSigns.csproj
+++ b/_BaseModule/MaestroItalianSigns.csproj
@@ -18,7 +18,7 @@
   <PropertyGroup>
     <IsBelzontCommonsMod>false</IsBelzontCommonsMod>
     <ModId>121615</ModId>
-    <Version>0.4.0</Version>
+    <Version>0.4.5</Version>
     <GameVersion>1.*</GameVersion>
     <ThumbnailPath>Properties/Thumbnail.png</ThumbnailPath>
     <DisplayName>Italian Signs (WE-Module)</DisplayName>
@@ -99,11 +99,7 @@
 	</ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Lib.Harmony" Version="2.3.3">
-      <IncludeAssets>compile</IncludeAssets>
-      <ExcludeAssets>runtime</ExcludeAssets>
-      <PrivateAssets>all</PrivateAssets>
-    </PackageReference>
+    <PackageReference Include="Lib.Harmony" Version="2.2.2"/>
   </ItemGroup>
 
   <ItemGroup>
